--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -51,9 +54,7 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
         <h2>
 Notes don't fail, Structure does.</h2>
         <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
-    </div>
-
-    <div class="feature-box">
+         <div class="feature-box">
         
         <div class="feature-card">
             <img src="icons/Group 6.png" alt="">
@@ -80,13 +81,49 @@ you learned</h3>
             <p>Knowledge fades because there's no system to retain it.</p>
             </div>
 </div>
+    </div>
+
+   
+
+<section>
+    <div id="solution">
+        <div class="picture">
+<img src="images/image 7.png" alt="">
+</div>
+<div class="solution-text">
+    <h4>THE SOLUTION</h4>
+    <h2>Your second brain,
+structured by design.</h2>
+<p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
+   <div>
+     <img src="icons/CheckCircle.png" alt="">
+    <p>Capture ideas with structure built-in from day one</p>
+
+    <img src="icons/CheckCircle.png" alt="">
+    <p>Connect related concepts automatically as you write</p>
+
+
+    <img src="icons/CheckCircle.png" alt="">
+    <p>Build lasting knowledge through reflection prompts</p>
+
+    <img src="icons/CheckCircle.png" alt="">
+    <p>Find anything instantly with semantic search</p>
+</div>
+
+</div>
+
+
+    </div>
+</section>
 
      
   <footer class="footer">
-    <img src="images/fi_15563377 (1).png" alt="">
+    <div>
+         <img src="images/fi_15563377 (1).png" alt="">
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-linkedin"></i>
     <i class="fa-brands fa-twittwe"></i>
+    </div>
 
     <hr>
     <p>© 2026 KnowledgeVault. All rights reserved.</p>
