--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -35,7 +35,7 @@
             <div class="hero-content">
                 <a href=""><img src="icons/Group 5.png" alt=""> Early access Now Open</a>
                 <h1>Structured thinking, 
-            
+                    <br>
                 <span>Not Just Note-Taking.</span></h1>
                 <p>A private space to store notes, links, and learning summaries — designed to
 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
@@ -120,17 +120,18 @@ structured by design.</h2>
 
 <section class="last">
     <div class="get-ready">
-        <div class="content">
+        <div class="middle"><div class="content">
             <h2>Ready to Think More Clearly?</h2>
         <p>Join thousands of learners who are building their personal knowledge vault,Start free, no credit card required.</p>
         <button class="all-button">Get Early Access</button>
         <p>Free during early access • No credit card needed</p>
-        </div>
+        </div></div>
     </div>
 </section>
      
   <footer class="footer">
-    <div class="logo-social">
+    <div class="footer-section">
+        <div class="logo-social">
          <img src="icons/fi_15563377.svg" alt="">
          <div class="social">
             <h4>Social Links</h4>
@@ -139,6 +140,7 @@ structured by design.</h2>
     <i class="fa-brands fa-square-x-twitter"></i>
          </div>
         </div>
+    </div>
 <div class="copyright"> <hr>
     <p>© 2026 KnowledgeVault. All rights reserved.</p></div>
    
