--- a/index.html
+++ b/index.html
@@ -97,25 +97,20 @@ you learned</h3>
     <h2>Your second brain,
 structured by design.</h2>
 <p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
-   <div>
-     <img src="icons/CheckCircle.png" alt="">
-    <p>Capture ideas with structure built-in from day one</p>
+   
+<div class="circle-icon">
+    <ul>
+        <li><i class="fa-solid fa-circle-check"></i>Capture ideas with structure built-in from day one</li>
+        <li><i class="fa-solid fa-circle-check"></i>Connect related concepts automatically as you write</li>
+        <li>
+    <i class="fa-solid fa-circle-check"></i>Build lasting knowledge through reflection prompts</li>
+    <li><i class="fa-solid fa-circle-check"></i>Find anything instantly with semantic search</li>
+    </ul>
 
-    <img src="icons/CheckCircle.png" alt="">
-    <p>Connect related concepts automatically as you write</p>
-
-
-    <img src="icons/CheckCircle.png" alt="">
-    <p>Build lasting knowledge through reflection prompts</p>
-
-    <img src="icons/CheckCircle.png" alt="">
-    <p>Find anything instantly with semantic search</p>
 </div>
 
 </div>
 
-
-    </div>
 </section>
 
 <section class="last">
