--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>A private space to store notes, links, and learning summaries — designed to
 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
 <button class="start-btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
-<button class="see-btn">See How It Works</button>
+<button class="see-btn">See How It Works <i class="fa-solid fa-play"></i></button>
 </div>
         </div>
     
@@ -143,3 +143,6 @@ structured by design.</h2>
 
 </body>
 </html>
+        
+
+  
